--- a/Thọ.ipynb
+++ b/Thọ.ipynb
@@ -16,7 +16,7 @@
     "import string\n",
     "\n",
     "a = input('Enter your name: ')\n",
-    "    # print(len(a))"
+    "print(len(a))"
    ],
    "id": "7f1dc428cd03f595"
   },
